Fixed card spacing

--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -5,6 +5,7 @@
     /* align-items: center; */
     height: 100vh;
     width: 100vw;
+    justify-content: space-evenly;
 }
 
 
@@ -19,6 +20,6 @@
     display: flex;
     flex-direction: column;
     max-width: 80vw;
-    max-height: 80vh;
+    max-height: 100%;
 }
 
